# word_counter

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  GenerateResources.cmake
src/: main.cpp  main.qml  main.qrc
src/imports/: ChartView.qml  MainWindow.qml  MainWindowFooter.qml  MainWindowHeader.qml  Placeholder.qml  qmldir
src/models/: word_counter.cpp  word_counter.h  word_counter_error.h  word_counter_model.cpp  word_counter_model.h  word_counter_result.h  word_counter_thread.cpp  word_counter_thread.h
src/translations/: en.ts
tests/: CMakeLists.txt  word_counter.test.cpp  word_counter_model.test.cpp
tests/data/: test_data.txt
